# virtual-buttons-yolo-pose

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml
docs/screenshots/: README.md
model/: README.md
src/: config.py  virtual_buttons.py
tests/: test_helpers.py
